--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://ArashHaraj.github.io/dashboard",
   "name": "project_syncfusion_dashboard",
   "version": "0.1.0",
   "private": true,
